--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,14 @@ botocore==1.13.5
 certifi==2019.9.11
 docutils==0.15.2
 jmespath==0.9.4
+pandas==0.25.3
 python-dateutil==2.8.0
+requests==2.21.0
+requests-html==0.10.0
 s3transfer==0.2.1
 six==1.12.0
 urllib3==1.25.6
 wincertstore==0.2
 yahoo-fin==0.8.2
+
+
