--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,18 @@ ipython_config.py
 # pyenv
 .python-version
 
+# Virtualenv
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
+
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
@@ -129,6 +141,7 @@ dmypy.json
 .pyre/
 
 #vscode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
