--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: "python:3.7"
 before_script:
   - python3.7 --version
   - pip3.7 install -r requirements.txt --user
+  - export AWS_DIR="~/.aws/"
 
 stages:
   - test
