--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,9 @@ test:
   - python3.7 test_stock_retriever.py
   - touch test.txt
   - python3.7 test_vm_scp.py
+  - python3.7 test_remote_process.py
+  - python3.7 test_dns.py $DNS_API_DOMAIN $DNS_API_KEY $DNS_API_SECRET
+
   
 expensive_test:
     stage: expensive_test
