--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,22 +29,29 @@ test:
   - python3.7 test_vm_scp.py
   - python3.7 test_remote_process.py
   - python3.7 test_dns.py $DNS_API_DOMAIN $DNS_API_KEY $DNS_API_SECRET
+  - cd ..
 
-  
 expensive_test:
-    stage: expensive_test
-    script:
-    - cd tests
-    - az login -u $AZURE_UN -p $AZURE_PW
-    - python3.7 test_azure.py
-    except:
-    - branches
+  stage: expensive_test
+  script:
+  - cd tests
+  - az login -u $AZURE_UN -p $AZURE_PW
+  - python3.7 test_azure.py
+  except:
+  - branches
 
 coverage:
   stage: test
   script:
-      - python -m unittest discover
-      - coverage report -m
-      - coverage-badge
+  - cd tests
+  - az login -u $AZURE_UN -p $AZURE_PW
+  - python3.7 test_stock_retriever.py
+  - touch test.txt
+  - python3.7 test_vm_scp.py
+  - python3.7 test_remote_process.py
+  - python3.7 test_dns.py $DNS_API_DOMAIN $DNS_API_KEY $DNS_API_SECRET
+  - cd ..
+  - coverage report -m
+  - coverage-badge
 
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
