--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,14 +43,7 @@ expensive_test:
 coverage:
   stage: test
   script:
-  - cd tests
-  - az login -u $AZURE_UN -p $AZURE_PW
-  - python3.7 test_stock_retriever.py
-  - touch test.txt
-  - python3.7 test_vm_scp.py
-  - python3.7 test_remote_process.py
-  - python3.7 test_dns.py $DNS_API_DOMAIN $DNS_API_KEY $DNS_API_SECRET
-  - cd ..
+  - python3 -m unittest discover
   - coverage report -m
   - coverage-badge
 
