Revert "added functionality to tests/__init__.py"
This reverts commit 0048c02dfc0ba8aaeaa4a0f8e549802527dfdec4.
Idea didn't work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ test:
 expensive_test:
   stage: expensive_test
   script:
+  - cd tests
   - az login -u $AZURE_UN -p $AZURE_PW
   - python3.7 test_azure.py
   except:
@@ -42,7 +43,7 @@ expensive_test:
 coverage:
   stage: test
   script:
-  - python3 -m unittest discover -s test
+  - python3 -m unittest discover
   - coverage report -m
   - coverage-badge
 
