--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,12 +1,35 @@
-FROM python:3.7
+# BUILDER #
+FROM python:3.8.0-alpine as builder
 
 WORKDIR /usr/src/app
 
-
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-#Not pip-ing, driver should...
 
-COPY . /driver
+COPY ./requirements.txt .
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
-ENTRYPOINT [ "path 2" ]
+# FINAL #
+FROM python:3.8.0-alpine
+
+RUN mkdir -p /home/app
+RUN addgroup -S app && adduser -S app -G app
+
+ENV HOME=/home/app
+ENV APP_HOME=/home/app/web
+RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles
+WORKDIR $APP_HOME
+
+RUN apk update && apk add libpq
+COPY --from=builder /usr/src/app/wheels /wheels
+COPY --from=builder /usr/src/app/requirements.txt .
+RUN pip install --upgrade pip
+RUN pip install --no-cache /wheels/*
+
+COPY ./entrypoint.prod.sh $APP_HOME
+COPY . $APP_HOME
+RUN chown -R app:app $APP_HOME
+
+USER app
+ENTRYPOINT ["/home/app/web/entrypoint.prod.sh"]
