--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,10 @@
-version: '3.7'
+version: '3.5'
 
 services:
     web:
         build:
           context: ./dashboard
-          dockerfile: Dockerfile.prod
+          dockerfile: Dockerfile.dev
         command: gunicorn dashboard.wsgi:application --bind 0.0.0.0:8000
         volumes:
             - static_volume:/home/app/web/staticfiles
@@ -17,7 +17,7 @@ services:
         volumes:
             - static_volume:/home/app/web/staticfiles
         ports:
-            - 1337:80
+            - 8000:80
         depends_on:
             - web
 
