--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
-version: '3.7'
+version: '3.5'
 
 services:
     web:
-        build: ./dashboard
-        command: python manage.py runserver 0.0.0.0:8000 
+        build:
+          context: ./dashboard
+          dockerfile: Dockerfile.prod
+        command: gunicorn dashboard.wsgi:application --bind 0.0.0.0:8000
         volumes:
-            - ./dashboard/:/usr/src/app/
+            - static_volume:/home/app/web/staticfiles
+        expose:
+            - 8000
+        env_file:
+          - ./.env.prod
+    nginx:
+        build: ./nginx
+        volumes:
+            - static_volume:/home/app/web/staticfiles
         ports:
-            - 8000:8000
-        env_file: :
-            - ./.env.dev
+            - 80:80
+        depends_on:
+            - web
+
+volumes:
+    static_volume:
