--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,20 +24,17 @@ test:
   script:
   - cd tests
   - az login -u $AZURE_UN -p $AZURE_PW
-  - python3.7 test_stock_retriever.py
   - touch test.txt
-  - python3.7 test_vm_scp.py
-  - python3.7 test_remote_process.py
-  - python3.7 test_dns.py $DNS_API_DOMAIN $DNS_API_KEY $DNS_API_SECRET
+  - python3 -m unittest discover -s test
   - cd ..
 
-expensive_test:
-  stage: expensive_test
-  script:
-  - az login -u $AZURE_UN -p $AZURE_PW
-  - python3.7 test_azure.py
-  except:
-  - branches
+#expensive_test:
+#  stage: expensive_test
+#  script:
+#  - az login -u $AZURE_UN -p $AZURE_PW
+#  - python3.7 test_azure.py
+#  except:
+#  - branches
 
 coverage:
   stage: test
