--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 image: "python:3.7"
 
 before_script:
-
 - python3.7 --version
 - pip3.7 install -r requirements.txt
 - export AWS_DIR="~/.aws/"
@@ -42,7 +41,8 @@ expensive_test:
 coverage:
   stage: test
   script:
-  - python3 -m coverage run tests/*.py
+  - pip3.7 install -r requirements.txt
+  - python3 -m coverage run tests/test_stock_retriever.py
   - coverage report -m
   - coverage-badge
 
