--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ coverage:
   stage: test
   script:
   - pip3.7 install -r requirements.txt
-  - python3 -m coverage run tests/test_stock_retriever.py
+  - coverage run tests/test_stock_retriever.py
   - coverage report -m
   - coverage-badge
 
