--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,14 +4,14 @@ services:
     web:
         build:
           context: ./dashboard
-          dockerfile: Dockerfile.prod
+          dockerfile: Dockerfile.dev
         command: gunicorn dashboard.wsgi:application --bind 0.0.0.0:8000
         volumes:
             - static_volume:/home/app/web/staticfiles
         expose:
             - 8000
         env_file:
-          - ./.env.prod
+          - ./.env.dev
     nginx:
         build: ./nginx
         volumes:
