include path on v=coverage report

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,8 +41,9 @@ expensive_test:
 coverage:
   stage: test
   script:
+  - pwd
   - coverage run tests/test_stock_retriever.py
-  - coverage report -m
+  - coverage report -m --include=" ~/builds/AuXps1xA/0/tp3-2019-cs27/cs27-main/"
   - coverage-badge
 
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
