--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ coverage:
   stage: test
   script:
   - pwd
-  - coverage run tests/test_stock_retriever.py --source="."
+  - coverage run --source="." tests/test_stock_retriever.py
   - coverage report -m --include="."
   - coverage-badge
 
