--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ coverage:
   stage: test
   script:
   - pwd
-  - coverage run --source="." tests/test_stock_retriever.py
+  - coverage run --source="StockRetriever.py" tests/test_stock_retriever.py
   - coverage report -m
   - coverage-badge
 
