--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ test:
   - python3.7 test_vm_scp.py
   - python3.7 test_remote_process.py
   - python3.7 test_dns.py $DNS_API_DOMAIN $DNS_API_KEY $DNS_API_SECRET
+  - python3.7 test_driver.py
 
   
 expensive_test:
