--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
           dockerfile: Dockerfile
         command: gunicorn dashboard.wsgi:application --bind 0.0.0.0:8000
         volumes:
-            - static_volume:/home/dashboard/web/staticfiles
+            - static_volume:~/cs27-main/dashboard/static
         expose:
             - 8000
         env_file:
@@ -15,7 +15,7 @@ services:
     nginx:
         build: ./nginx
         volumes:
-            - static_volume:/home/dashboard/web/staticfiles
+            - static_volume:~/cs27-main/dashboard/static
         ports:
             - 80:80
         depends_on:
