--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,10 @@ services:
             - 80:80
         depends_on:
             - web
+    py_code:
+        build: .
+        depends_on:
+            - web
 
 volumes:
     static_volume:
