--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 SECRET_KEY=alpha
 DEBUG=1
-DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 glaros.uk [::1]'
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 glaros.uk [::1]
+GLAROS_DRIVER_DIR=/root/cs27-main
