--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,18 @@ services:
           dockerfile: Dockerfile
         command: gunicorn dashboard.wsgi:application --bind 0.0.0.0:8000
         volumes:
-            - static_volume:~/cs27-main/dashboard/static
+            - static_volume:/home/dashboard/web/staticfiles
         expose:
             - 8000
         env_file:
-          - ./.env.prod
+          - ./.env.dev
     nginx:
         build: ./nginx
         volumes:
-            - static_volume:~/cs27-main/dashboard/static
+            - static_volume:/home/dashboard/web/staticfiles
         ports:
             - 80:80
         depends_on:
             - web
-    py_code:
-        build: .
-        depends_on:
-            - web
-
 volumes:
     static_volume:
