--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .idea/
+google-credentials.json
+dashboard/dashboard_app/migrations/
 nohup.out
+deploy_web.out
+dashboard/general_info.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -36,6 +40,8 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+
+dashboard.conf
 
 # Installer logs
 pip-log.txt
